--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -18,6 +18,7 @@
     float: none;
     margin-left: 0;
     flex: 0 0 auto;
+    order: 2;
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
